Add detail description and rate from user

--- a/Admin/template/pages/samples/lock-screen.html
+++ b/Admin/template/pages/samples/lock-screen.html
@@ -25,7 +25,7 @@
         <div class="row w-100">
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-transparent text-left p-5 text-center">
-              <img src="../../images/img.png" class="lock-profile-img" alt="img">
+              <img src="../../images/img-compressed.jpg" class="lock-profile-img" alt="img">
               <form class="pt-5">
 <!--                <div class="form-group">-->
 <!--                  <label for="examplePassword1">Password to unlock</label>-->
