--- a/Admin/template/index.html
+++ b/Admin/template/index.html
@@ -140,7 +140,7 @@
           </li>
           <li class="nav-item nav-profile dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" id="profileDropdown">
-              <img src="images/img.png" alt="profile"/>
+              <img src="images/img-compressed.jpg" alt="profile"/>
               <span class="nav-profile-name">Nguyễn Trung Hiếu</span>
             </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
@@ -299,28 +299,28 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-7 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-title">Biểu đồ thu nhập</p>
-                  <div id="cash-deposits-chart-legend" class="d-flex justify-content-center pt-3"></div>
-                  <canvas id="cash-deposits-chart"></canvas>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-5 grid-margin stretch-card">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-title">Tổng doanh thu</p>
-                  <h1>78.950.000 VND</h1>
-                  <h4>Tăng trưởng qua từng tháng</h4>
-                  <div id="total-sales-chart-legend"></div>                  
-                </div>
-                <canvas id="total-sales-chart"></canvas>
-              </div>
-            </div>
-          </div>
+<!--          <div class="row">-->
+<!--            <div class="col-md-7 grid-margin stretch-card">-->
+<!--              <div class="card">-->
+<!--                <div class="card-body">-->
+<!--                  <p class="card-title">Biểu đồ thu nhập</p>-->
+<!--                  <div id="cash-deposits-chart-legend" class="d-flex justify-content-center pt-3"></div>-->
+<!--                  <canvas id="cash-deposits-chart"></canvas>-->
+<!--                </div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div class="col-md-5 grid-margin stretch-card">-->
+<!--              <div class="card">-->
+<!--                <div class="card-body">-->
+<!--                  <p class="card-title">Tổng doanh thu</p>-->
+<!--                  <h1>78.950.000 VND</h1>-->
+<!--                  <h4>Tăng trưởng qua từng tháng</h4>-->
+<!--                  <div id="total-sales-chart-legend"></div>                  -->
+<!--                </div>-->
+<!--                <canvas id="total-sales-chart"></canvas>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
           <div class="row">
             <div class="col-md-12 stretch-card">
               <div class="card">
